--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
     implementation files('libs\\open_sdk_r2973327_lite.jar')
+    implementation 'com.tencent.mm.opensdk:wechat-sdk-android-without-mta:5.5.8'
 }
 
 task makeJar(type:Copy){
